# diy-iot-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
migrations/2023-01-30-141258_users/: up.sql
migrations/2023-02-04-110337_devices/: up.sql
migrations/2023-02-13-123330_lights/: down.sql  up.sql
migrations/2023-02-13-202245_traits/: down.sql  up.sql
migrations/2023-08-06-214706_users/: up.sql
src/: constants.rs  db.rs  get_token.html  google_structs.rs  jwt_issuer.rs  main.rs  models.rs  routes.rs  schema.rs  utils.rs
src/models/: device.rs  light.rs  mod.rs  user.rs
src/routes/: device.rs  google.rs  oauth.rs  user.rs
