[package]
name = "diy-iot-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.4.4",features=['private-cookies']}
rocket_codegen = "0.4.4"
diesel = { version = "1.0.0", features = ["postgres","uuid"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
custom_derive ="0.1.7"
oxide-auth-rocket="0.1.0"
oxide-auth="0.5.3"
jsonwebtoken = "8.2.0"
serde_urlencoded = "0.7.1"
chrono="0.4.23"
uuid={version="0.6.5",features=["v4","serde"]}
[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json","diesel_postgres_pool"]
