[package]
name = "diy-iot-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.4.4",features=['private-cookies']}
rocket_codegen = "0.4.4"
diesel = { version = "1.0.0", features = ["postgres","uuid"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
base64="0.21.0"
custom_derive ="0.1.7"
oxide-auth-rocket="0.1.0"
oxide-auth="0.5.3"
jsonwebtoken = "8.2.0"
serde_urlencoded = "0.7.1"
chrono="0.4.23"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
uuid={version="0.6.5",features=["v4","serde"]}
coap-client = {path="../rust-coap-client"}
anyhow="1.0.68"
tokio="1.24.2"
coap-lite="0.9.0"
futures="0.3.25"
coap="0.12.0"
openssl = "0.10.45"
[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json","diesel_postgres_pool"]
