[package]
name = "diy-iot-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coap-client = { git = "https://github.com/sikora77/rust-coap-client.git", rev = "b3ac627312f512fc6251f905590828ed3b320811" }
rocket = { version = "0.4.4", features = ['private-cookies'] }
rocket_codegen = "0.4.4"
rocket_cors = "0.5.2"
diesel = { version = "2.1.0", features = ["postgres", "uuid", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
base64 = "0.21.0"
custom_derive = "0.1.7"
oxide-auth-rocket = "0.1.0"
oxide-auth = "0.5.3"
jsonwebtoken = "9.3.0"
serde_urlencoded = "0.7.1"
chrono = "0.4.23"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
anyhow = "1.0.68"
tokio = "1.24.2"
coap-lite = "0.9.0"
futures = "0.3.25"
coap = "0.12.0"
[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10.45", features = ["vendored"] }
[target.'cfg(target_env="gnu")'.dependencies]
openssl = { version = "0.10.45" }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_postgres_pool"]
[build]
rustflags = ["-L /usr/lib", "-l pq", "-C target-feature=-crt-static"]
rustc-link-lib = ["ssl", "crypto"]
